--- a/responsive-material-design-contact-form/index.html
+++ b/responsive-material-design-contact-form/index.html
@@ -2,7 +2,8 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>RESPONSIVE MATERIAL DESIGN CONTACT FORM </title>
+  <title>New OKL Form
+   </title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
@@ -14,8 +15,8 @@
 </head>
 
 <body>
-  <h1> Responsive Material Design Form 
-  <small>Material Design delivers a cleaner and flatter user interface</small>
+  <h1> OKL Form
+  <small>This is a template for UI</small>
 </h1>
 <section class="contact-wrap">
   <form action="" class="contact-form">
@@ -56,11 +57,7 @@
 </section>
 
 <!-- follow me template -->
-<div class="made-with-love">
-  Made with 
-  <i>♥</i> by 
-  <a target="_blank" href="http://codepen.io/nikhil8krishnan">Nikhil Krishnan</a>
-</div>
+
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/index.js"></script>
